feature: send last modification and do not update view when no change is made
